update notification-service